# sbirka-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  repository.yaml
addon/: DOCS.md  Dockerfile  build.yaml  config.yaml  run.sh
src/curia_mcp/: __init__.py  celex.py  eurlex.py  infocuria.py  server.py
src/sbirka_mcp/: __init__.py  auth.py  citations.py  client.py  server.py
tests/: test_celex.py  test_citations.py
