[project]
name = "sbirka-mcp"
version = "0.1.0"
description = "MCP server for the Czech e-Sbírka / e-Legislativa public REST API (legal research and regulation search)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "David Závada" }]
keywords = ["mcp", "e-sbirka", "e-legislativa", "czech-law", "legislation"]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sbirka-mcp = "sbirka_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sbirka_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
